--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -2,6 +2,21 @@
 {% load bootstrap %}
 
 {% block content %}
+    <br>
+    {% if form.errors %}
+        {% for field in form %}
+            {% for error in field.errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endfor %}
+        {% for error in form.non_field_errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endif %}
     <div class="container">
         <form role="form">
             <legend>Post a new report</legend>
