--- a/search/templates/search/signup.html
+++ b/search/templates/search/signup.html
@@ -3,7 +3,22 @@
 
 {% block content %}
     <div class="container">
-        <form role="form" mehotd="post">
+        <br>
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
+        <form role="form" method="post">
             <legend>Sign Up</legend>
             {% csrf_token %}
             {{ form|bootstrap }}
